Coverity analysis defect 174773: Parse warning

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.2.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • Query Optimization
    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None
    • 0

      Parse warning

      A parse warning may reduce maintainability of the code, or it may indicate a serious error. A parse warning from the Coverity parser may indicate a bug, or poor coding practice
      /data/mci/fbd34c3b3a35c8d0787940fa2d037c3b/bazel_cache/2f45b20e4a081e4503c327aa801c7d87/execroot/_main/src/mongo/db/query/wildcard_multikey_paths.cpp:418: PW.PARAMETER_HIDDEN 174773 declaration hides parameter "entry" (declared at line 392)

            Assignee:
            Anton Korshunov
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: