SERVER-105758 Fix Coverity analysis PARAMETER_HIDDEN defect (#37234)

GitOrigin-RevId: 3e42b8b5b1f687287f210f3bbbc3248e6f955f57